<resources>
    <string name="app_name">MyWorldtrip</string>
    <string name="countryname">Countryname</string>
    <string name="attributeName">Attribute</string>
    <string name="newEntry">neuer Eintrag</string>
    <string name="add">Hinzufügen</string>
    <string name="item">- </string>
    <string name="datefrom">Datum von</string>
    <string name="dateto">Datum bis</string>
    <string name="selectCountry">Reiseland auswählen</string>
    <string name="to">bis</string>
    <string name="from">von</string>
    <string name="addCountry">Reiseland hinzufügen</string>
    <string name="traveldates">Zeitraum</string>
    <string name="visum">Visum</string>
    <string name="duty">Pflicht</string>
    <string name="neededFrom">nötig ab</string>
    <string name="subregion">Region</string>
    <string name="curreny">Währung</string>
    <string name="languages">Sprache</string>
    <string name="timezones">Zeitzonen</string>
    <string name="population">Einwohnerzahl</string>
    <string name="capital">Hauptstadt</string>
    <string name="generalinformation">Allgemeine Informationen</string>
    <string name="mintemp">Min. Temperatur in °C</string>
    <string name="maxtemp">Max. Temperatur in °C</string>
    <string name="raindays">Regentage</string>
    <string name="weather">Wetter</string>
    <string name="vaccinations">Impfungen</string>
    <string name="attractions">Sehenwürdigkeiten</string>
    <string name="travelcosts">Reisekosten</string>
    <string name="flightcost">Flugkosten</string>
    <string name="dailyNightcost">Tägliche Übernachtungskosten</string>
    <string name="dailycost">Tägliche Kosten</string>
    <string name="notes">Notizen</string>
    <string name="traveloverview">Reiseübersicht</string>
    <string name="newTrip">Neue Reise</string>
    <string name="license">Lizenz</string>
    <string name="faq">FAQ</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="areUsureAllDeleted">Sind Sie sich sicher? Alle gespeicherten Daten werden gelöscht.</string>
    <string name="gotDeleted">wurde gelöscht.</string>
    <string name="restore">wiederherstellen</string>
    <string name="noCountryToRestore">Kein Land zum Wiederherstellen vorhanden.</string>
    <string name="datasaved">Daten wurden gespeichert.</string>
    <string name="lincenseInformation">Lizenzinformationen</string>
    <string name="flag">Flagge</string>
    <string name="timeline">Timeline</string>
    <string name="totalcost">Gesamtkosten</string>
    <string name="duration">Dauer</string>
    <string name="weathersituation">Wetterlage</string>
    <string name="humidity">Luftfeutigkeit in %</string>
    <string name="source">Quelle</string>
    <string name="windspeed">Windgeschwindigkeit in km/h</string>
    <string name="celcius">°C</string>
    <string name="kmh">km/h</string>
    <string name="percent">%</string>
    <string name="noInformation">Keine Informationen gefunden.</string>
    <string name="days">Tage</string>
    <string name="euro">€</string>


</resources>
